<resources>
    <string name="app_name">Commute Parking</string>
    <string name="action_settings">Settings</string>
    <string name="parking_area_title" translatable="false">Parking Area title</string>
	<string name="parking_empty_view" translatable="false">Loading image view</string>
	<string name="dialog_background_image" translatable="false">Dialog background</string>
	<string name="info_view" translatable="false">Info icon</string>
	<string name="parking_area_parking_spaces">Parking spaces: %1$d</string>
	<string name="parking_area_free_parking_spaces">Free parking spaces: %1$d </string>
	<string name="info_dialog_title">About</string>
	<string name="info_explanation">This app uses Västtrafiks open API for getting information. The nuber of free
		parking spaces showed in the app can differ from reality.
	</string>
	<string name="credits" translatable="false">Credits</string>
	<string name="credits_text" translatable="false"> CircleImageView\nCopyright 2014 - 2019 Henning Dodenhof

		Licensed under the Apache License, Version 2.0 (the "License");
		you may not use this file except in compliance with the License.
		You may obtain a copy of the License at

		http://www.apache.org/licenses/LICENSE-2.0

		Unless required by applicable law or agreed to in writing, software
		distributed under the License is distributed on an "AS IS" BASIS,
		WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
		See the License for the specific language governing permissions and
		limitations under the License.</string>
	<string name="location_permission">The location permission is requested so the parking areas can be sorted based on
		distance.</string>
	<string name="bullet" translatable="false">bullet</string>

</resources>
