<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
											 xmlns:app="http://schemas.android.com/apk/res-auto"
											 xmlns:tools="http://schemas.android.com/tools"
											 android:layout_width="match_parent"
											 android:layout_height="match_parent">

	<TextView
			android:text="@string/info_dialog_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="8dp" android:textSize="30sp"/>
	<TextView
			android:text="@string/info_explanation"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/textView2"
			android:layout_marginTop="16dp"
			app:layout_constraintTop_toBottomOf="@+id/textView"
			app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
			app:layout_constraintStart_toEndOf="@+id/imageView2" android:layout_marginStart="8dp"/>
	<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" app:srcCompat="@android:drawable/radiobutton_off_background"
			android:id="@+id/imageView2"
			android:contentDescription="@string/bullet"
			app:layout_constraintTop_toTopOf="@+id/textView2" app:layout_constraintBottom_toBottomOf="@+id/textView2"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
	<TextView
			android:text="@string/location_permission"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/textView5" android:layout_marginTop="16dp"
			app:layout_constraintTop_toBottomOf="@+id/textView2"
			app:layout_constraintStart_toEndOf="@+id/imageView4"
			android:layout_marginStart="8dp"
			app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
	<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" app:srcCompat="@android:drawable/radiobutton_off_background"
			android:id="@+id/imageView4"
			android:contentDescription="@string/bullet"
			app:layout_constraintTop_toTopOf="@+id/textView5" app:layout_constraintBottom_toBottomOf="@+id/textView5"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
	<TextView
			android:text="@string/credits_text"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/textView6"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/imageView5"
			android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/textView8"
			android:layout_marginTop="16dp"/>
	<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" app:srcCompat="@android:drawable/radiobutton_off_background"
			android:id="@+id/imageView5"
			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
			app:layout_constraintBottom_toBottomOf="@+id/textView6" app:layout_constraintTop_toTopOf="@+id/textView6"
			android:contentDescription="@string/bullet"/>
	<TextView
			android:text="@string/credits"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/textView8" android:layout_marginTop="30sp"
			app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp"/>
	<android.support.design.widget.FloatingActionButton android:id="@+id/info_fab"
														android:layout_width="wrap_content"
														android:layout_height="wrap_content"
														app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
														app:layout_constraintBottom_toBottomOf="parent"
														android:layout_marginBottom="16dp"
														android:layout_marginEnd="16dp"
														app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>